test/parser/Queries/syntax_errors/fail_K-WhereExpr-7.xq
(:******** eq **************************** $ ********** let *******: eq )
: Test: K-WhereExpr-7                                 :) for foo
(:  eq Written by: Frans Englich  let                       ne    $    $  :)
(: Date: 2006-10-05T18:29:37+02:00         let     for        $     :)
(:  A for expression binding to one single value, eq   for combined with ne  a positivewhere clause. :)
(foo:foo******** where **** ne ******************************** let * where * let * where *******:)
empty(for $ in 1 where (1, current-time())[1] for  treat as xs:integer eq 0 return $i)